# cgrep

./: .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  README.md  appveyor.yml  cgrep.cpp  cgrep.roff  compile_commands.json  covrun.sh  makefile  makeman.sh  pch.hpp  run.sh
.github/workflows/: cmake.yml
docker/11/: Dockerfile
docker/12/: Dockerfile
docker/13/: Dockerfile
docker/14/: Dockerfile
docker/15/: Dockerfile
docker/16/: Dockerfile
docker/17/: Dockerfile
docker/18/: Dockerfile
docker/19/: Dockerfile
docker/20/: Dockerfile
docker/21/: Dockerfile
docker/22/: Dockerfile
docker/arch/: Dockerfile
test/: callexpr.cpp  classdecl.cpp  compile_commands.json  cxxmembercallexpr.cpp  cxxmethoddecl.cpp  cxxrecorddecl.cpp  declrefexpr.cpp  fielddecl.cpp  function.cpp  main.ast  main.cpp  makefile  nameddecldef.cpp  structdecl.cpp  test_list.md  uniondecdef.cpp  vardecl.cpp
testscript/: main.py
